Change eve.json log location to c:\suricata\log

--- a/suricata.yaml
+++ b/suricata.yaml
@@ -53,8 +53,7 @@ vars:
 # The default logging directory.  Any log or output file will be
 # placed here if its not specified with a full path name. This can be
 # overridden with the -l command line parameter.
-default-log-dir: \\wsl$\Ubuntu-18.04\home\\wac
-#C:\\Suricata\\log
+default-log-dir: C:\\Suricata\\log
 
 # global stats configuration
 stats:
